# WebSockets_Generic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/Async/ESP8266_AsyncWSClient/: ESP8266_AsyncWSClient.ino
examples/ENC28J60/WebSocketClientStompOverSockJs_ENC/: WebSocketClientStompOverSockJs_ENC.ino
examples/ENC28J60/WebSocketClientStomp_ENC/: WebSocketClientStomp_ENC.ino
examples/ENC28J60/WebSocketClient_ENC/: WebSocketClient_ENC.ino
examples/RP2040W/WebSocketClientSSL_RP2040W/: WebSocketClientSSL_RP2040W.ino
examples/RP2040W/WebSocketClient_RP2040W/: WebSocketClient_RP2040W.ino
examples/W5500/WebSocketClientStompOverSockJs_W5500/: WebSocketClientStompOverSockJs_W5500.ino
examples/W5500/WebSocketClientStomp_W5500/: WebSocketClientStomp_W5500.ino
examples/W5500/WebSocketClient_W5500/: WebSocketClient_W5500.ino
examples/WIO_Terminal/WIOTerminal_WebSocketClient/: WIOTerminal_WebSocketClient.ino
examples/WIO_Terminal/WIOTerminal_WebSocketClientSSL/: WIOTerminal_WebSocketClientSSL.ino
examples/WT32_ETH01/WT32_ETH01_WebSocketClient/: WT32_ETH01_WebSocketClient.ino
examples/WiFiNINA/WebSocketClient_NINA/: WebSocketClient_NINA.ino
src/: SocketIOclient_Generic-Impl.h  SocketIOclient_Generic.h  WebSockets4WebServer_Generic.h  WebSocketsClient_Generic-Impl.h  WebSocketsClient_Generic.h  WebSocketsDebug_Generic.h  WebSocketsServer_Generic-Impl.h  WebSocketsServer_Generic.h  WebSockets_Generic-Impl.h  WebSockets_Generic.h  debug_macros.h
src/libb64/: cdecode-Impl.h  cdecode_inc.h  cencode-Impl.h  cencode_inc.h
src/libsha1/: libsha1.h
(+44 files in other folders)
